<resources>
    <string name="app_name">Cine Prime</string>
    <string name="movie_thumbnail_desc">movie poster thumbnail</string>
    <string name="filter">Filter</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="sort_criteria">sort criteria</string>
    <string name="sort_criteria_id">sort criteria id</string>
    <string name="movie_object">movie object</string>
    <string name="movie_backdrop_desc">Movie Backdrop poster</string>
    <string name="released_on">Released On</string>
    <string name="rating">Rating</string>
    <string name="no_network_message">No Internet Connection!! Tap to retry.</string>
    <string name="retry_loading_button">Retry button to load movies</string>
    <string name="overview">----------------&lt; Overview &gt;----------------</string>
    <string name="favourite_button">Button to mark movie as favourite</string>
    <string name="added_to_favourite">Movie added to Favourites</string>
    <string name="removed_from_favourite">Movie removed from Favourites</string>
    <string name="favourites">Favourites</string>
    <string name="casts">----------------&lt; Casts &gt;----------------</string>
    <string name="trailers">----------------&lt; Trailers &gt;----------------</string>
    <string name="trailer_description">Trailer Poster</string>
    <string name="play_button">Play button image</string>
    <string name="reviews">----------------&lt; Reviews &gt;----------------</string>
    <string name="scroll_casts">Scroll to right for more casts</string>
    <string name="scroll_trailers">Scroll to right for more trailers</string>
    <string name="scroll_reviews">Scroll to right for more reviews</string>
    <string name="no_favourites">Nothing in the favourites!!</string>
    <string name="video_error">Cannot find any app to open the video</string>
    <string name="share_movie">Share Movie</string>
    <string name="chooser_title">Share Trailer with</string>
    <string name="curtain_going_up">Curtain image going up</string>
</resources>
